# mi-backend-trainee-assignment

./: .env  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
api/: crud.py  database_connection.py  database_functions.py  db.py  get_data_from_avito.py  headers.py  main.py  models.py  schemas.py  storage.py  storage_connection.py
app/: main.py  models.py  schemas.py  storage.py
tests/: conftest.py  test_crud.py  test_database.py  test_database_functions.py  test_get_data_from_avito.py  test_main.py  test_storage.py
tests/fixtures/: advert_stat_requests.py  adverts.py  adverts_stats.py  headers.py  item_stat_requests.py  items.py  items_stats.py  responses_data.py  test_db.db
