[tool.poetry]
name = "avito_test"
version = "1.0.0"
description = ""
authors = ["Roddy <per677199@yandex.ru>"]

packages = [
  { include = "app" },
  { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.3"
fastapi = "^0.62.0"
sqlalchemy = "^1.3.20"
requests = "^2.25.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.app"

